# Risk-Atlas-A-Market-Relationship-Artifact-Platform

./: .dockerignore  .env.example  .gitignore  .gitmodules  README.md  README.zh-CN.md  README.zh-HK.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  package.json  prisma.config.ts
apps/api/prisma/: bootstrap-initial-market-state.ts  generate-sample-eod.ts  import-crypto-coinbase.ts  import-crypto-market-map.ts  import-eod.ts  mvp-config.ts  real-hk-benchmark.ts  refresh-daily-market-state.ts  schema.prisma  seed.ts
apps/api/src/: app.ts  server.ts
apps/api/src/contracts/: analysis-runs.ts  build-runs.ts
apps/web/: .env.example  index.html  package.json  tsconfig.json  vite.config.js  vite.config.ts
apps/web/public/: robots.txt  sitemap.xml
apps/web/scripts/: generate-sitemap.mjs
apps/web/src/: main.tsx
aws/: .env.production.example  Dockerfile.api  README.md  README.zh-CN.md  README.zh-HK.md  docker-compose.ec2.yml
aws/nginx/: risk-atlas-http.conf  risk-atlas-https.conf
aws/scripts/: bootstrap-ec2.sh  deploy-ec2.sh  run-daily-market-refresh.sh  sync-artifacts-to-s3.sh
aws/systemd/: risk-atlas-artifact-sync.service  risk-atlas-artifact-sync.timer  risk-atlas-crypto-daily-market-refresh.service  risk-atlas-crypto-daily-market-refresh.timer  risk-atlas-daily-market-refresh.service  risk-atlas-daily-market-refresh.timer  risk-atlas-hk-daily-market-refresh.service  risk-atlas-hk-daily-market-refresh.timer
cpp/: CMakeLists.txt
cpp/tools/: risk_atlas_bsm_incremental_builder.cpp  risk_atlas_bsm_query.cpp  risk_atlas_bsm_writer.cpp
data/crypto/: crypto_market_map_yahoo_v2.symbols.json  crypto_market_map_yahoo_v2.taxonomy.json
data/real-hk/: hk_eod_yahoo_real_v1.symbols.json  hk_eod_yahoo_real_v1.taxonomy.json  hkex_ListOfSecurities.xlsx
data/sample/: hk_eod_demo_v1.csv
docs/: MVP_SCOPE.md  RISK_ATLAS_ARCHITECTURE_ANALYSIS.md
infra/: docker-compose.yml
scripts/: bootstrap-local.sh  dev-stack.sh  quickstart.sh  real-hk-refresh.sh  sync-local-env.sh
(+100 files in other folders)
